...
            fontWeight = FontWeight.Medium
        )

        Spacer(modifier = Modifier.height(32.dp))

        val buttons = listOf(
            Pair("ALBUMES", Intent(context, AlbumesActivity::class.java)),
            Pair("ARTISTAS", Intent(context, ArtistasActivity::class.java)),
            Pair("COLECCIONISTAS", Intent(context, ColeccionistasActivity::class.java))
        )

        for (button in buttons) {
            ButtonBox(button, context)
            Spacer(modifier = Modifier.height(16.dp))
...
